--- a/.travis.yml
+++ b/.travis.yml
@@ -14,19 +14,38 @@ cache:
 
 script: "./gradlew clean build"
 
+before_deploy:
+  - zip -r springboot-webservice *
+  - mkdir -p deploy
+  - mv springboot-webservice.zip deploy/springboot-webservice.zip
+
 deploy:
   - provider: s3
-      access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
-      secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
-      bucket: expitly-deploy # S3 버킷
-      region: ap-northeast-2
-      skip_cleanup: true
-      acl: public_read
-      local_dir: deploy # before_deploy에서 생성한 디렉토리
-      wait-until-deployed: true
-      on:
-        repo: expitly/spring-webservice
-        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: expitly-deploy
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: public_read
+    local_dir: deploy
+    wait-until-deployed: true
+    on:
+      repo: expitly/spring-webservice
+      branch: master
+
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: expitly-deploy
+    key: springboot-webservice.zip
+    bundle_type: zip
+    application: springboot-webservice
+    deployment_group: springboot-webservice-group
+    region: ap-northeast-2
+    wait-until-deployed: true
+    on:
+    repo: expitly/spring-webservice
+    branch: master
 
 notifications:
   email:
