H2 배포 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,25 @@
-spring:
-  datasource:
-    url:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username:
-    password:
-  jpa:
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    properties:
-      hibernate:
-        id:
-          new_generator_mappings: false
-        format_sql: true
-    generate-ddl: true
-    show-sql: true
+#spring:
+#  datasource:
+#    url:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    username:
+#    password:
+#  jpa:
+#    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+#    properties:
+#      hibernate:
+#        id:
+#          new_generator_mappings: false
+#        format_sql: true
+#    generate-ddl: true
+#    show-sql: true
+#
+#logging:
+#  level:
+#    org:
+#      hibernate:
+#        SQL=DEBUG:
 
-logging:
-  level:
-    org:
-      hibernate:
-        SQL=DEBUG:
+h2:
+  console:
+    enabled: true
